1.8.7
-----

1.8.6
-----
(RB=139285)
Fix up RestLiServiceException.toString() and update ErrorResponse
schema to correctly reflect optional fields.

(RB=141420)
Add ColoVariants to D2Config

1.8.5
-----
(RB=138254)
Add pdsc file and validator for EmptyRecord.

(RB=138178)
Workaround bug in ScheduledThreadPoolExecutor that caused
delays when calling HttpClientFactory.shutdown().

(RB=139799)
Order subresources when restspec.json is exported. This avoids massive changes in restspec.json when
resources are added or removed. (This is due to internal use of HashMap.)

(RB=140005)
add ClientBuilderUtil.addSuffixToBaseName.

(RB=140198)
Fix bug in translating null value in a union with null when translating from Avro data to Pegasus.

(RB=140010)
Performance tuning for requests with large numbers of query params.

(RB=140733)
Modified LoadBalancerStrategy to use error rate for load balancing

1.8.4
-----
(RB=137488)
Fix to PSON deserialization issues.
PSON responses should not deserialize correctly.
The default representation for PSON strings is now a length-encoded string.
All length encoded strings are now encoded with a two byte length by default.  This is a backwards-
incompatible change.

(RB=136944)
Allow Content-Types to include an optional Charset.  For now it is ignored, but including it will
no longer allow either the client or the server to be unable to parse the Content-Type.

1.8.3
-----
(RB=135225)
Fix UnsupportedOperationException from UnmodifiableMap in SimpleLoadBalancerState.

1.8.2
------
(RB=131451)
Add PatchTreeRecorder & PatchRequestRecorder to build patches that allow you to remove fields.

(RB=130545)
Allow clients to send request bodies in pson format. Upgraded servers will be
able to interpet bodies in pson format.

(RB=133781)
Remove legacy server code that uses ',' as separator for batch_get ids.  Correct format is "?ids=1&ids=2".

1.8.1
-----
Revert RB 126830 until compatibility issues are resolved.

1.8.0
-----